force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/SproutSocialApp__Sprout_Social_Persona__c.object-meta.xml
<CustomObject>
    <label>Sprout Social Persona</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sprout Social Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprout Social Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>