force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sprout Social Personas</relationshipLabel>
    <relationshipName>Sprout_Social_Personas</relationshipName>
    <type>Lookup</type>
</CustomField>