force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/fields/Highlight_Customer__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Highlight Customer</label>
    <type>Checkbox</type>
</CustomField>