force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/fields/SproutSocialApp__Author_Labels__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Author_Labels__c</fullName>
    <label>Author Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>