force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/fields/SproutSocialApp__External_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__External_Picture_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Picture URL</label>
    <type>Url</type>
</CustomField>