force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/fields/SproutSocialApp__MediaProvider__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__MediaProvider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Media Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>