force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/fields/SproutSocialApp__ParentId__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__ParentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>