force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/fields/SproutSocialApp__Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Profile_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile URL</label>
    <type>Url</type>
</CustomField>