force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/fields/SproutSocialApp__RealName__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__RealName__c</fullName>
    <label>Real Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>