force-app/main/default/objects/SproutSocialApp__Sprout_Social_Persona__c/listViews/SproutSocialApp__All.listView-meta.xml
<ListView>
    <fullName>SproutSocialApp__All</fullName>
    <columns>NAME</columns>
    <columns>SproutSocialApp__MediaProvider__c</columns>
    <columns>SproutSocialApp__Provider__c</columns>
    <columns>SproutSocialApp__ParentContact__c</columns>
    <columns>SproutSocialApp__Followers__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>